--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,8 @@
 	sb = show-branch
 	ls = ls-files -r --name-only
 	ll = ls-files -r
+#	fixup = !sh -c 'git commit -m \"fixup! $(git log -1 --format='\\''%s'\\'' $@)\"' -
+#	squash = !sh -c 'git commit -m \"squash! $(git log -1 --format='\\''%s'\\'' $@)\"' -
 [core]
 	#autocrlf = false
 	excludesfile = ~/.gitignore
@@ -26,3 +28,5 @@
 	diff = auto
 [push]
 	default = current
+[rebase]
+	autosquash = true
